RESOLVED FIXED100646
[EFL][WK2] REGRESSION(r132342): fast/events/frame-tab-focus.html fails
https://bugs.webkit.org/show_bug.cgi?id=100646
Summary [EFL][WK2] REGRESSION(r132342): fast/events/frame-tab-focus.html fails
Raphael Kubo da Costa (:rakuco)
Reported 2012-10-29 02:39:02 PDT
As per <https://bugs.webkit.org/show_bug.cgi?id=100010#c5>: --- /home/buildslave-1/webkit-buildslave/efl-linux-64-debug-wk2/build/layout-test-results/fast/events/frame-tab-focus-expected.txt +++ /home/buildslave-1/webkit-buildslave/efl-linux-64-debug-wk2/build/layout-test-results/fast/events/frame-tab-focus-actual.txt @@ -1,6 +1,8 @@ This page tests tabbing between subframes. To test, click on this text to focus the main window. Then press Tab 7 times, then Shift-Tab 7 times, which should move focus forward and backward through all inputs and frames. Then press Option-Tab 11 times and Shift-Option-Tab 11 times, which should move focus forward and backward through all inputs, frames, and links. [tabindex of one] [tabindex of three] [tabindex of two] [tabindex of three] +main window: window blurred +main window: window focused Tabbing forward... main window: INPUT #2 (tabindex=2) focused
Attachments
Patch (3.37 KB, patch)
2012-10-29 07:03 PDT, Raphael Kubo da Costa (:rakuco)
kenneth: review+
Raphael Kubo da Costa (:rakuco)
Comment 1 2012-10-29 07:03:49 PDT
Raphael Kubo da Costa (:rakuco)
Comment 2 2012-10-29 07:23:33 PDT
Note You need to log in before you can comment on or make changes to this bug.